<resources>
    <string name="app_name">Wallpaper app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="popular">Popular</string>
    <string name="random">Random</string>
    <string name="liked">Liked</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="open_image">Open Image</string>

    <string name="website"><u>Website: Unsplash.com/afjru</u></string>
    <string name="empty">There is no any liked images</string>

</resources>