<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/popularFragment"
        android:enabled="true"
        android:icon="@drawable/ic_popular"
        android:title="@string/popular"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/randomFragment"
        android:enabled="true"
        android:icon="@drawable/ic_random"
        android:title="@string/random"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favoriteFragment"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_unselected"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

</menu>